--- a/bci-config.json
+++ b/bci-config.json
@@ -28,7 +28,7 @@
 		{
 		    "duration-ref": 3.0,
 			"duration-cue": 1.25,
-			"duration-task": 3.75,
+			"duration-task": 7,
 			"duration-break": [2.0, 3.5]
 		}
 	},
@@ -50,7 +50,7 @@
 		"block-size": 1,
 		"erds":
 		{
-			"mode": "average",
+			"mode": "single",
 			"number-roi" : 6,
 			"single-mode-channels": [3, 30, 8, 25, 14, 19]
 		}
